<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accept">Accept</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="debug_menu_ad_information">Ad Information</string>
    <string name="debug_menu_creative_preview">Creative Preview</string>
    <string name="debug_menu_title">Select a Debug Mode</string>
    <string name="debug_menu_troubleshooting">Troubleshooting</string>
    <string name="decline">Decline</string>
    <string name="exo_controls_fastforward_description">Fast forward</string>
    <string name="exo_controls_next_description">Next track</string>
    <string name="exo_controls_pause_description">Pause</string>
    <string name="exo_controls_play_description">Play</string>
    <string name="exo_controls_previous_description">Previous track</string>
    <string name="exo_controls_rewind_description">Rewind</string>
    <string name="exo_controls_stop_description">Stop</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="store_picture_title">Save image</string>
    <string name="action_select">Select</string>
    <string name="add_file_confirmation_message">"Are you sure you want to add this file for cleaning?

%1$s"</string>
    <string name="add_file_confirmation_title">Include file</string>
    <string name="add_folder_confirmation_message">"Are you sure you want to add this folder for cleaning?

%1$s"</string>
    <string name="add_folder_confirmation_title">Include folder</string>
    <string name="additionalBrowserAnalysisInfo">Browser: Detecting history</string>
    <string name="additionalBrowserAnalysisSitesInfo">Browser: %1$d visited sites</string>
    <string name="additionalCacheAnalysisInfo">Cache: Detecting apps</string>
    <string name="additionalCallLogAnalysisInfo">Call Logs: Detecting calls</string>
    <string name="additionalCallLogAnalysisNumCallsInfo">Call Logs: %1$d call logs</string>
    <string name="additionalClipboardAnalysisInfo">Clipboard: Detecting content</string>
    <string name="additionalDetectingAnalysisInfo">Detecting: %1$s</string>
    <string name="additionalTextsAnalysisInfo">Texts: Detecting texts</string>
    <string name="additionalTextsAnalysisNumTextsInfo">Texts: %1$d texts</string>
    <string name="additional_cache_analysis_packages_info">Cache: %1$d apps, %2$s</string>
    <string name="additional_detecting_apk_files_analysis_info">APK files: Detecting files</string>
    <string name="additional_detecting_bluetooth_folder_analysis_info">Bluetooth Folder: Detecting files</string>
    <string name="additional_detecting_custom_folders_analysis_info">Custom Files and Folders: Detecting files/folders</string>
    <string name="additional_detecting_downloaded_files_analysis_info">Download: Detecting files</string>
    <string name="additional_detecting_empty_folders_analysis_info">Empty folders: Detecting folders</string>
    <string name="additional_detecting_google_maps_cache_analysis_info">Google Maps cache: Detecting cache</string>
    <string name="additional_detecting_thumbnail_cache_analysis_info">Thumbnail Cache: Detecting files</string>
    <string name="additional_detecting_whatsapp_old_backups">WhatsApp: Detecting old backups</string>
    <string name="additional_detecting_whatsapp_sent_audio">WhatsApp: Detecting sent audio</string>
    <string name="additional_detecting_whatsapp_sent_images">WhatsApp: Detecting sent images</string>
    <string name="additional_detecting_whatsapp_sent_video">WhatsApp: Detecting sent video</string>
    <string name="additional_detecting_whatsapp_voice_notes">WhatsApp: Detecting voice notes</string>
    <string name="additional_process_analysis_info">Processes: Detecting processes</string>
    <string name="additional_process_analysis_packages_info">Processes: %1$d</string>
    <string name="age_all">All</string>
    <string name="age_nothing">Nothing</string>
    <string name="age_older_than_1_month">Older than 1 month</string>
    <string name="age_older_than_2_weeks">Older than 2 weeks</string>
    <string name="age_older_than_3_months">Older than 3 months</string>
    <string name="all">All</string>
    <string name="all_files">All files</string>
    <string name="analysis_cancelled">Analysis cancelled</string>
    <string name="analysis_completed">Analysis completed: %1$s can be saved</string>
    <string name="analysis_group_short_summary_no_items">%1$s to clean</string>
    <string name="analysis_header_label_storage">Storage</string>
    <string name="analyze">Analyze</string>
    <string name="android">Android</string>
    <string name="apk_file_path_info">Path: %1$s</string>
    <string name="apk_file_size_info">Size: %1$s</string>
    <string name="apk_file_status_info">Status: %1$s</string>
    <string name="apk_files">APK Files</string>
    <string name="apk_files_cleaning">Cleaning APK files</string>
    <string name="apk_files_loading">Loading APK files</string>
    <string name="apk_status_corrupted">Corrupted</string>
    <string name="apk_status_installed_latest">Installed</string>
    <string name="button_label_save">Save</string>
    <string name="custom_folder_file_types_hint">e.g. tmp;log</string>
    <string name="custom_folder_file_types_section_title">File types</string>
    <string name="custom_folder_folder_section_title">Folder</string>
    <string name="custom_folder_options_section_title">Options</string>
    <string name="custom_folders_config_title">Custom Files and Folders</string>
    <string name="customization_title">Customize Analyses</string>
    <string name="file_types">File types</string>
    <string name="include_files_and_subfolders">Include files and subfolders</string>
    <string name="include_files_only">Include files only</string>
    <string name="include_files_subfolders_and_folder_itself">Include files, subfolders and the folder itself</string>
    <string name="quick_clean_config_title">Quick Clean Widget</string>
    <string name="settings_category_title_about">About</string>
    <string name="settings_category_title_scheduling">Cleaning notifications</string>
    <string name="settings_customization_section_title">Analysis and Cleaning Settings</string>
    <string name="settings_summary_translator_acknowledgements">This version of CCleaner for Android was translated into {your language here} by {your names here}</string>
    <string name="settings_title_application_version">Version</string>
    <string name="settings_title_licenses">Licenses</string>
    <string name="settings_title_privacy">Privacy</string>
    <string name="settings_title_scheduling_when">Notify me to clean</string>
    <string name="settings_title_translator_acknowledgements">Translator Acknowledgements</string>
    <string name="share_via_facebook">Facebook</string>
    <string name="share_via_google_plus">Google+</string>
    <string name="share_via_twitter">Twitter</string>
    <string name="share_cleaning_results_card_text_subtext">Tap to let your social network friends know how much you just saved!</string>
    <string name="share_cleaning_results_card_text_title">%1$s saved! Why not tell your friends?</string>
    <string name="app_manager_button_disable">@string/disable</string>
    <string name="app_manager_button_enable">@string/enable</string>
    <string name="app_manager_button_uninstall">@string/uninstall</string>
    <string name="pro_purchased_button_text">@string/get_started</string>
    <string name="pro_purchased_feedback_link_text">@string/have_your_say_on_future_pro_features</string>
    <string name="pro_purchased_sub_text">@string/thank_you_for_purchasing_ccleaner</string>
    <string name="pro_purchased_title_text">@string/you_are_now_a_pro_user</string>
    <string name="settings_category_key_about">aboutCategory</string>
    <string name="settings_category_key_scheduling">schedulingCategory</string>
    <string name="settings_key_application_version">applicationVersion</string>
    <string name="settings_key_developer_options">developerOptions</string>
    <string name="settings_key_scheduling_when">schedulingWhen</string>
    <string name="settings_key_translator_acknowledgements">translatorAcknowledgements</string>
    <string name="settings_uri_privacy">https://www.piriform.com/go/app_android_privacy</string>
    <string name="upgrade_to_pro_benefit_title">@string/as_a_pro_user_you_will_benefit_from</string>
    <string name="upgrade_to_pro_buy">@string/buy</string>
    <string name="upgrade_to_pro_layout_title">@string/you_are_one_step_away_from_becoming_a_pro_user</string>
</resources>