<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView android:layout_width="fill_parent" android:layout_height="wrap_content" card_view:cardElevation="2.0dip" card_view:cardUseCompatPadding="true"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:card_view="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/CardListItem">
        <TextView android:id="@id/text" android:paddingLeft="@dimen/padding_big" android:paddingRight="@dimen/padding_big" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/share_cleaning_results_card_text_title" style="@style/ListItemText.Title" />
        <TextView android:id="@id/text2" android:paddingLeft="@dimen/padding_big" android:paddingRight="@dimen/padding_big" android:paddingBottom="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/share_cleaning_results_card_text_subtext" style="@style/ListItemText.Subtitle" />
        <LinearLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" style="?android:buttonBarStyle">
            <Button android:id="@id/share_button_twitter" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/share_via_twitter" android:layout_weight="1.0" style="@style/FlatButton.Twitter" />
            <Button android:id="@id/share_button_facebook" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/share_via_facebook" android:layout_weight="1.0" style="@style/FlatButton.Facebook" />
            <Button android:id="@id/share_button_google_plus" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/share_via_google_plus" android:layout_weight="1.0" style="@style/FlatButton.GooglePlus" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>